# backend-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-full  Makefile  README.md  config.production.toml  config.staging.toml  config.vagrant.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  startup.sh
Flashpost-tests/: flashpost.db  flashpostCollections.db  flashpostCookies.db  flashpostHistory.db  flashpostVariable.db
data/mutual_funds/: FBGRX_US.json  FSPTX_US.json
src/: config.rs  dataframe_service.rs  helper.rs  langchain_service.rs  leveraged_funds_service.rs  main.rs  models.rs  mongo_service.rs  py03_service.rs  rest_client.rs  router.rs  s3_service.rs
src/services/: earnings.rs
src/sravz_rust_py/: JSONLoaderExtended.py  PyMessage.py  agent_supervisor.py  aws.py  earnings.py  json_toolkit_extended.py  langchain_helper.py  leveraged_funds.py  main.ipynb  main.py  openai_embeddings.py  settings.py
src/sravz_rust_py/sravz_llm_agent_tools/: QueryData.py  QueryResponse.py  agents.py  llm.py  llm_settings.py  tools.py
src/sravz_rust_py/tests/: additional_imports.py  earnings.parquet  test_agent_supervisor.py  test_aws.py  test_earnings.py  test_main.py
src/sravz_rust_py/tests/sravz_llm_agent_tools_tests/: test_tools.py
src/sravz_rust_py/tests/tests_sravz_llm_agent_tools/: additional_imports.py  test_tools.py
src/sravz_rust_py/utils/: logger_setup.py
tests/: message.json  message_3.json
