[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sravz_rust_py", "sravz_rust_py.sravz_llm_agent_tools"]

[project]
name = "sravz_rust_py"
version = "0.1.0"
description = "Sravz Rust Python Integration"
authors = [{ name = "Your Name", email = "your.email@example.com" }]

[tool.pytest.ini_options]
pythonpath = ["src"]
